<?xml version="1.0" encoding="UTF-8"?>

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.javamentor</groupId>
    <artifactId>jmp-project</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>jmp-project webapp</name>
    <!--  <url>http://www.example.com</url>-->

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.5.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>jstl</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>4.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.9</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>5.1.35</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>5.4.4.Final</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>jmp-project</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
            </plugin>
        </plugins>
        <!--        <pluginManagement>&lt;!&ndash; lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) &ndash;&gt;-->
        <!--            <plugins>-->
        <!--                <plugin>-->
        <!--                    <artifactId>maven-clean-plugin</artifactId>-->
        <!--                    <version>3.1.0</version>-->
        <!--                </plugin>-->
        <!--                &lt;!&ndash; see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging &ndash;&gt;-->
        <!--                <plugin>-->
        <!--                    <artifactId>maven-resources-plugin</artifactId>-->
        <!--                    <version>3.1.0</version>-->
        <!--                </plugin>-->
        <!--                <plugin>-->
        <!--                    <artifactId>maven-compiler-plugin</artifactId>-->
        <!--                    <version>3.8.1</version>-->
        <!--                </plugin>-->
        <!--                <plugin>-->
        <!--                    <artifactId>maven-surefire-plugin</artifactId>-->
        <!--                    <version>2.22.2</version>-->
        <!--                </plugin>-->
        <!--                <plugin>-->
        <!--                    <artifactId>maven-war-plugin</artifactId>-->
        <!--                    <version>3.2.3</version>-->
        <!--                </plugin>-->
        <!--                <plugin>-->
        <!--                    <artifactId>maven-install-plugin</artifactId>-->
        <!--                    <version>2.5.2</version>-->
        <!--                </plugin>-->
        <!--                <plugin>-->
        <!--                    <artifactId>maven-deploy-plugin</artifactId>-->
        <!--                    <version>2.8.2</version>-->
        <!--                </plugin>-->
        <!--            </plugins>-->
        <!--        </pluginManagement>-->
        <!--        <plugins>-->
        <!--            <plugin>-->
        <!--                <groupId>org.apache.maven.plugins</groupId>-->
        <!--                <artifactId>maven-compiler-plugin</artifactId>-->
        <!--                <configuration>-->
        <!--                    <source>${java.version}</source>-->
        <!--                    <target>${java.version}</target>-->
        <!--                </configuration>-->
        <!--            </plugin>-->
        <!--        </plugins>-->
    </build>
</project>
